# mini-cdn

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cdn-edge/: Cargo.toml
crates/cdn-edge/src/: cache.rs  config.rs  main.rs  proxy.rs  router.rs  shutdown.rs
crates/cdn-origin/: Cargo.toml
crates/cdn-origin/src/: config.rs  main.rs  router.rs  shutdown.rs
crates/cdn-origin/static/: index.html
src/: lib.rs
