[package]
name    = "cdn-edge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
dashmap     = "6"
bytes       = "1"
futures-util      = "0.3"
http-body-util    = "0.1"
tower             = "0.5"
