[package]
name    = "cdn-origin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "set-header", "trace", "compression-full"] }
tower = "0.5"
